--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,12 +8,12 @@ jobs:
   build:
     strategy:
       matrix:
-        os: ["ubuntu-latest"]
+        os: ["ubuntu-latest", "macos-latest", "windows-latest"]
     runs-on: ${{ matrix.os }}
-  
+
     steps:
-      - uses: vlang/setup-v@v1
       - name: Install V
+        uses: vlang/setup-v@v1
         with:
           check-latest: true
 
@@ -23,7 +23,11 @@ jobs:
       - name: Check if code is formatted
         run: |
           v fmt -diff .
-          v fmt -verify .          
-
+          v fmt -verify .
       - name: Build ${{ github.event.repository.name }}
         run: v .
+
+      - name: Run Tests
+        run: v test .
+        env:
+          VJOBS: 1
