--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,13 +50,20 @@ jobs:
         env:
           VJOBS: 1
 
-      - name: Make Binary
-        run:  |
-          v -prod src/xertask.v -o xertask
-          v -prod src/xerdump.v -o xerdump
-          v -prod src/xerdiff.v -o xerdiff
-          v -prod src/xerpred.v -o xerpred
-          v -prod src/xer2json.v -o xer2json
+      - name: Make production XERTASK
+        run:  v -prod src/xertask.v -o xertask
+
+      - name: Make production XERDIFF
+        run:  v -prod src/xerdiff.v -o xerdiff
+
+      - name: Make production XERDUMP
+        run:  v -prod src/xerdump.v -o xerdump
+      
+      - name: Make production XERPRED
+        run:  v -prod src/xerpred.v -o xerpred
+
+      - name: Make production XER2JSON
+        run:  v -prod src/xer2json.v -o xer2json
   
       - name: GH Release
         uses: softprops/action-gh-release@v0.1.14
