--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,7 +69,7 @@ jobs:
         uses: softprops/action-gh-release@v0.1.14
         with:
           tag_name: beta
-          files:
+          files: |
             xertask
             xerdump
             xerdiff
