--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Make production binaries
         working-directory: src
         run: |
-            build.sh
+            ./build.sh
   
       - name: GH Release
         uses: softprops/action-gh-release@v0.1.14
