--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,9 @@ jobs:
         env:
           VJOBS: 1
 
+      - name: Install MinGW for cross-compile
+        run: sudo apt-get install gcc-mingw-w64-x86-64
+
       - name: Make production binaries
         working-directory: src
         run: |
