--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,6 +60,7 @@ jobs:
   
       - name: GH Release
         uses: softprops/action-gh-release@v0.1.14
+        working-directory: src
         with:
           tag_name: beta
           files: |
