--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,16 +53,17 @@ jobs:
       - name: Install MinGW for cross-compile
         run: sudo apt-get install gcc-mingw-w64-x86-64
 
+      - name: Copy SQLite files for Windows cross-compile
+        working-directory: thirdparty
+        run: |
+            mkdir -p /opt/hostedtoolcache/v/0.3.0/x64/thirdparty/sqlite/
+            cp * /opt/hostedtoolcache/v/0.3.0/x64/thirdparty/sqlite/
+
       - name: Make production binaries
         working-directory: src
         run: |
             ./build.sh
 
-      - name: Copy SQLite files for Windows cross-compile
-        working-directory: thirdparty
-        run: |
-            cp * /opt/hostedtoolcache/v/0.3.0/x64/thirdparty/sqlite/
-  
       - name: GH Release
         uses: softprops/action-gh-release@v0.1.14
         with:
