--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,8 +15,8 @@ jobs:
         VJOBS: 1
         VTEST_SHOW_START: 1
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
+      - uses: vlang/checkout@v2
+      - uses: vlang/setup-node@v1
         with:
           node-version: 12.x
       - name: Build
