--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,22 @@ jobs:
 
       - name: Build
         run: |
-          v -prod src/xerdiff.v
+          v -prod -cc msvc src/xerdiff.v -o xerdiff.exe
+          v -prod -cc msvc src/xertask.v -o xertask.exe
+          v -prod -cc msvc src/xerdump.v -o xerdump.exe
+          v -prod -cc msvc src/xerpred.v -o xerpred.exe
+          v -prod -cc msvc src/xer2json.v -o xer2json.exe
+
+      - name: GH Release
+        uses: softprops/action-gh-release@v0.1.14
+        with:
+          tag_name: beta
+          files: |
+            xertask.exe
+            xerdump.exe
+            xerdiff.exe
+            xerpred.exe
+            xer2json.exe
 
   build:
     strategy:
