--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,10 @@ jobs:
           v -prod -cc msvc src/xerpred.v -o xerpred.exe
           v -prod -cc msvc src/xer2json.v -o xer2json.exe
 
+      - name: Make zip
+        run: |
+          powershell Compress-Archive xertask.exe,xerdiff.exe,xerdump.exe,xerpred.exe,xer2json.exe xertools_latest_win64.zip
+
       - name: GH Release
         uses: softprops/action-gh-release@v0.1.14
         with:
@@ -50,6 +54,7 @@ jobs:
             xerdiff.exe
             xerpred.exe
             xer2json.exe
+            xertools_latest_win64.zip
 
   build:
     strategy:
@@ -112,7 +117,6 @@ jobs:
 
       - name: Make zips
         run: |
-            zip xertools_latest_win64.zip xerdiff.exe xerdump.exe xertask.exe xerpred.exe xer2json.exe
             zip xertools_latest_linux.zip xerdiff xerdump xertask xerpred xer2json
 
       - name: GH Release
@@ -125,10 +129,4 @@ jobs:
             xerdiff
             xerpred
             xer2json
-            xertask.exe
-            xerdump.exe
-            xerdiff.exe
-            xerpred.exe
-            xer2json.exe
-            xertools_latest_win64.zip
             xertools_latest_linux.zip
