--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,12 +22,7 @@ jobs:
         uses: vlang/setup-v@v1
         with:
           check-latest: true
-     # - name: Build
-     #   run: |
-     #     echo %VFLAGS%
-     #     echo $VFLAGS
-     #     .\make.bat -msvc
-     #     .\v.exe self
+
       - name: Symlink
         run: |
           C:\hostedtoolcache\windows\v\0.3.0\x64\v.exe symlink
@@ -40,11 +35,11 @@ jobs:
 
       - name: Build
         run: |
-          v -prod -cc msvc src/xerdiff.v -o xerdiff.exe
-          v -prod -cc msvc src/xertask.v -o xertask.exe
-          v -prod -cc msvc src/xerdump.v -o xerdump.exe
-          v -prod -cc msvc src/xerpred.v -o xerpred.exe
-          v -prod -cc msvc src/xer2json.v -o xer2json.exe
+          v -prod -cc gcc src/xerdiff.v -o xerdiff.exe
+          v -prod -cc gcc src/xertask.v -o xertask.exe
+          v -prod -cc gcc src/xerdump.v -o xerdump.exe
+          v -prod -cc gcc src/xerpred.v -o xerpred.exe
+          v -prod -cc gcc src/xer2json.v -o xer2json.exe
 
       - name: Make zip
         run: |
